// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing appbar rendered properly 1`] = `
<div
  className="search-bar flex flex-row items-center "
>
  <img
    alt="search"
    className="back-icon ml-3"
    draggable={false}
    src="/images/Back.png"
  />
  <div
    className="flex-1 text-xl text-left flex flex-row justify-between items-center"
  >
    <span
      className="pl-3 header-title"
    >
      Appbar Render Test
    </span>
  </div>
  <img
    alt="search"
    className="search-icon mr-3"
    draggable={false}
    id="searchIcon"
    onClick={[Function]}
    src="/images/search.png"
  />
</div>
`;

exports[`testing appbar rendered properly 2`] = `
<div
  className="search-bar flex flex-row items-center show-search"
>
  <img
    alt="search"
    className="back-icon ml-3"
    draggable={false}
    src="/images/Back.png"
  />
  <div
    className="flex-1 text-xl text-left flex flex-row justify-between items-center"
  >
    <span
      className="pl-3 header-title"
    >
      Appbar Render Test
    </span>
    <input
      class="text-base search-input mx-3 px-3 flex-1"
      onChange={[Function]}
      placeholder="search here..."
      type="text"
    />
  </div>
  <img
    alt="search"
    className="search-icon mr-3"
    draggable={false}
    id="searchIcon"
    onClick={[Function]}
    src="/images/search.png"
  />
</div>
`;

exports[`testing appbar rendered properly 3`] = `
<div
  className="search-bar flex flex-row items-center "
>
  <img
    alt="search"
    className="back-icon ml-3"
    draggable={false}
    src="/images/Back.png"
  />
  <div
    className="flex-1 text-xl text-left flex flex-row justify-between items-center"
  >
    <span
      className="pl-3 header-title"
    >
      Appbar Render Test
    </span>
  </div>
  <img
    alt="search"
    className="search-icon mr-3"
    draggable={false}
    id="searchIcon"
    onClick={[Function]}
    src="/images/search.png"
  />
</div>
`;
